--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 spring:
   application:
     name: UnifizeDiscountService
+  redis:
+    host: localhost
+    port: 6379
+  cache:
+    type: simple
 server:
-  port: 80 
+  port: 8080
+
