--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,10 @@
 spring:
   application:
     name: UnifizeDiscountService
+  redis:
+    host: localhost
+    port: 6379
+  cache:
+    type: simple
 server:
-  port: 80 
+  port: 8080
